# ADSiteParsing

./: CMakeLists.txt  main.cpp
.github/workflows/: codeql-analysis.yml
